// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Text renders empty when no data is provided 1`] = `null`;

exports[`#Text renders label only when data is missing 1`] = `
<div>
  Text Label
</div>
`;

exports[`#Text renders text with html when data is provided 1`] = `
Array [
  <div>
    Text Label
  </div>,
  <div>
    <mock-RichContent
      html="<div>Text</div>"
    />
  </div>,
]
`;

exports[`#Text renders text without html when data is provided 1`] = `
Array [
  <div>
    Text Label
  </div>,
  <div>
    Text
  </div>,
]
`;
